[gd_scene load_steps=47 format=2]

[ext_resource path="res://resources/images/MenuInterface/PersonBG.jpg" type="Texture" id=1]
[ext_resource path="res://BackToChoosePersons.gd" type="Script" id=2]
[ext_resource path="res://resources/images/MenuInterface/exit.png" type="Texture" id=3]
[ext_resource path="res://resources/images/MenuInterface/exitPressed.png" type="Texture" id=4]
[ext_resource path="res://resources/images/MenuInterface/exitHover.png" type="Texture" id=5]
[ext_resource path="res://CharacteristicPersonScin.gd" type="Script" id=6]
[ext_resource path="res://resources/images/MenuInterface/ChooseClassOpisBg.png" type="Texture" id=7]
[ext_resource path="res://PersonName.gd" type="Script" id=8]
[ext_resource path="res://resources/fonts/a_gildiaexp.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://Opisanie.gd" type="Script" id=10]
[ext_resource path="res://resources/fonts/times.ttf" type="DynamicFontData" id=11]
[ext_resource path="res://ShowCharacteristics.gd" type="Script" id=12]
[ext_resource path="res://resources/images/MenuInterface/icons/minus.png" type="Texture" id=13]
[ext_resource path="res://resources/images/MenuInterface/icons/input.png" type="Texture" id=14]
[ext_resource path="res://resources/images/MenuInterface/icons/plus.png" type="Texture" id=15]
[ext_resource path="res://resources/images/MenuInterface/icons/plus hover.png" type="Texture" id=16]
[ext_resource path="res://resources/images/MenuInterface/icons/plus pressed.png" type="Texture" id=17]
[ext_resource path="res://resources/images/MenuInterface/icons/minus hover.png" type="Texture" id=18]
[ext_resource path="res://resources/images/MenuInterface/icons/minus pressed.png" type="Texture" id=19]
[ext_resource path="res://resources/images/MenuInterface/icons/Button hover.png" type="Texture" id=20]
[ext_resource path="res://resources/images/MenuInterface/icons/Button pressed.png" type="Texture" id=21]
[ext_resource path="res://resources/images/MenuInterface/icons/Button.png" type="Texture" id=22]
[ext_resource path="res://CharacControl.gd" type="Script" id=23]
[ext_resource path="res://resources/fonts/timesbd.ttf" type="DynamicFontData" id=24]
[ext_resource path="res://resources/images/MenuInterface/button hover.png" type="Texture" id=25]
[ext_resource path="res://resources/images/MenuInterface/button pressed.png" type="Texture" id=26]
[ext_resource path="res://resources/images/MenuInterface/button.png" type="Texture" id=27]
[ext_resource path="res://ToLevelGeneration.gd" type="Script" id=28]
[ext_resource path="res://AutomatonMode/Scripts/Interface/TranslatableLabel.gd" type="Script" id=29]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=2]
size = 22
font_data = ExtResource( 11 )

[sub_resource type="DynamicFont" id=3]
size = 22
font_data = ExtResource( 11 )

[sub_resource type="DynamicFont" id=4]
size = 25
font_data = ExtResource( 24 )

[sub_resource type="DynamicFont" id=5]
size = 25
font_data = ExtResource( 11 )

[sub_resource type="DynamicFont" id=6]
size = 25
font_data = ExtResource( 11 )

[sub_resource type="DynamicFont" id=7]
size = 25
font_data = ExtResource( 11 )

[sub_resource type="DynamicFont" id=8]
size = 25
font_data = ExtResource( 11 )

[sub_resource type="DynamicFont" id=9]
size = 25
font_data = ExtResource( 24 )

[sub_resource type="DynamicFont" id=10]
size = 25
font_data = ExtResource( 11 )

[sub_resource type="DynamicFont" id=11]
size = 25
font_data = ExtResource( 11 )

[sub_resource type="DynamicFont" id=12]
size = 25
font_data = ExtResource( 11 )

[sub_resource type="DynamicFont" id=13]
size = 25
font_data = ExtResource( 11 )

[sub_resource type="DynamicFont" id=14]
size = 25
font_data = ExtResource( 11 )

[sub_resource type="DynamicFont" id=15]
size = 25
font_data = ExtResource( 11 )

[sub_resource type="DynamicFont" id=16]
size = 25
font_data = ExtResource( 11 )

[sub_resource type="DynamicFont" id=17]
size = 25
font_data = ExtResource( 11 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="BG" type="TextureRect" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Person" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackToChoosePersons" type="TextureButton" parent="."]
margin_left = 1130.0
margin_top = 570.0
margin_right = 1230.0
margin_bottom = 670.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 5 )
expand = true
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CharacPlane" type="TextureRect" parent="."]
margin_left = 50.0
margin_top = 50.0
margin_right = 910.0
margin_bottom = 680.0
texture = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CharacPlane"]
margin_left = 282.0
margin_top = 19.0
margin_right = 582.0
margin_bottom = 69.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
align = 1
valign = 1
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="opisatie" type="Label" parent="CharacPlane"]
margin_left = 110.0
margin_top = 90.0
margin_right = 434.0
margin_bottom = 293.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShowCharacteristics" type="Label" parent="CharacPlane"]
margin_left = 435.0
margin_top = 89.0
margin_right = 785.0
margin_bottom = 300.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
script = ExtResource( 12 )

[node name="CharacControl" type="Control" parent="CharacPlane"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -330.0
margin_top = -20.0
margin_right = 370.0
margin_bottom = 230.0
rect_pivot_offset = Vector2( 350, 125 )
script = ExtResource( 23 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="health" type="Control" parent="CharacPlane/CharacControl"]
anchor_left = 0.116
anchor_top = 0.476
anchor_right = 0.558
anchor_bottom = 0.54
margin_left = -81.2
margin_top = -114.0
margin_right = -10.6
margin_bottom = -90.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="minus" type="TextureButton" parent="CharacPlane/CharacControl/health"]
margin_right = 40.0
margin_bottom = 40.0
texture_normal = ExtResource( 13 )
texture_pressed = ExtResource( 19 )
texture_hover = ExtResource( 18 )

[node name="plus" type="TextureButton" parent="CharacPlane/CharacControl/health"]
margin_left = 340.0
margin_right = 380.0
margin_bottom = 40.0
texture_normal = ExtResource( 15 )
texture_pressed = ExtResource( 17 )
texture_hover = ExtResource( 16 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="CharacPlane/CharacControl/health"]
margin_left = 40.0
margin_right = 340.0
margin_bottom = 40.0
texture = ExtResource( 14 )

[node name="Stats" type="HBoxContainer" parent="CharacPlane/CharacControl/health"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -20.0
margin_right = 150.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 150, 20 )
custom_constants/separation = 0

[node name="Name" type="Label" parent="CharacPlane/CharacControl/health/Stats"]
margin_top = 5.0
margin_right = 200.0
margin_bottom = 34.0
rect_min_size = Vector2( 200, 0 )
rect_pivot_offset = Vector2( 100, 15 )
custom_fonts/font = SubResource( 4 )
text = "Здоровье"
align = 1
script = ExtResource( 29 )

[node name="Change" type="Label" parent="CharacPlane/CharacControl/health/Stats"]
margin_left = 200.0
margin_top = 5.0
margin_right = 250.0
margin_bottom = 34.0
rect_min_size = Vector2( 50, 0 )
rect_pivot_offset = Vector2( 25, 15 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_fonts/font = SubResource( 5 )
text = "+1"
align = 1
valign = 1

[node name="Value" type="Label" parent="CharacPlane/CharacControl/health/Stats"]
margin_left = 250.0
margin_top = 5.0
margin_right = 300.0
margin_bottom = 34.0
rect_min_size = Vector2( 50, 0 )
rect_pivot_offset = Vector2( 25, 15 )
custom_fonts/font = SubResource( 6 )
text = "10"
align = 1
valign = 1

[node name="straight" type="Control" parent="CharacPlane/CharacControl"]
anchor_left = 0.116
anchor_top = 0.476
anchor_right = 0.558
anchor_bottom = 0.54
margin_left = -81.2
margin_top = -64.0
margin_right = -10.6
margin_bottom = -40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="minus" type="TextureButton" parent="CharacPlane/CharacControl/straight"]
margin_right = 40.0
margin_bottom = 40.0
texture_normal = ExtResource( 13 )
texture_pressed = ExtResource( 19 )
texture_hover = ExtResource( 18 )

[node name="plus" type="TextureButton" parent="CharacPlane/CharacControl/straight"]
margin_left = 340.0
margin_right = 380.0
margin_bottom = 40.0
texture_normal = ExtResource( 15 )
texture_pressed = ExtResource( 17 )
texture_hover = ExtResource( 16 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="CharacPlane/CharacControl/straight"]
margin_left = 40.0
margin_right = 340.0
margin_bottom = 40.0
texture = ExtResource( 14 )

[node name="Stats" type="HBoxContainer" parent="CharacPlane/CharacControl/straight"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -20.0
margin_right = 150.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 150, 20 )
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="CharacPlane/CharacControl/straight/Stats"]
margin_top = 5.0
margin_right = 200.0
margin_bottom = 34.0
rect_min_size = Vector2( 200, 0 )
rect_pivot_offset = Vector2( 100, 15 )
custom_fonts/font = SubResource( 4 )
text = "Сила"
align = 1
script = ExtResource( 29 )

[node name="Change" type="Label" parent="CharacPlane/CharacControl/straight/Stats"]
margin_left = 200.0
margin_top = 5.0
margin_right = 250.0
margin_bottom = 34.0
rect_min_size = Vector2( 50, 0 )
rect_pivot_offset = Vector2( 25, 15 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_fonts/font = SubResource( 5 )
text = "+1"
align = 1
valign = 1

[node name="Value" type="Label" parent="CharacPlane/CharacControl/straight/Stats"]
margin_left = 250.0
margin_top = 5.0
margin_right = 300.0
margin_bottom = 34.0
rect_min_size = Vector2( 50, 0 )
rect_pivot_offset = Vector2( 25, 15 )
custom_fonts/font = SubResource( 6 )
text = "10"
align = 1
valign = 1

[node name="agility" type="Control" parent="CharacPlane/CharacControl"]
anchor_left = 0.116
anchor_top = 0.476
anchor_right = 0.558
anchor_bottom = 0.54
margin_left = -81.2
margin_top = -14.0
margin_right = -10.6
margin_bottom = 10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="minus" type="TextureButton" parent="CharacPlane/CharacControl/agility"]
margin_right = 40.0
margin_bottom = 40.0
texture_normal = ExtResource( 13 )
texture_pressed = ExtResource( 19 )
texture_hover = ExtResource( 18 )

[node name="plus" type="TextureButton" parent="CharacPlane/CharacControl/agility"]
margin_left = 340.0
margin_right = 380.0
margin_bottom = 40.0
texture_normal = ExtResource( 15 )
texture_pressed = ExtResource( 17 )
texture_hover = ExtResource( 16 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="CharacPlane/CharacControl/agility"]
margin_left = 40.0
margin_right = 340.0
margin_bottom = 40.0
texture = ExtResource( 14 )

[node name="Stats" type="HBoxContainer" parent="CharacPlane/CharacControl/agility"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -20.0
margin_right = 150.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 150, 20 )
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="CharacPlane/CharacControl/agility/Stats"]
margin_top = 5.0
margin_right = 200.0
margin_bottom = 34.0
rect_min_size = Vector2( 200, 0 )
rect_pivot_offset = Vector2( 100, 15 )
custom_fonts/font = SubResource( 4 )
text = "Ловкость"
align = 1
script = ExtResource( 29 )

[node name="Change" type="Label" parent="CharacPlane/CharacControl/agility/Stats"]
margin_left = 200.0
margin_top = 5.0
margin_right = 250.0
margin_bottom = 34.0
rect_min_size = Vector2( 50, 0 )
rect_pivot_offset = Vector2( 25, 15 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_fonts/font = SubResource( 5 )
text = "+1"
align = 1
valign = 1

[node name="Value" type="Label" parent="CharacPlane/CharacControl/agility/Stats"]
margin_left = 250.0
margin_top = 5.0
margin_right = 300.0
margin_bottom = 34.0
rect_min_size = Vector2( 50, 0 )
rect_pivot_offset = Vector2( 25, 15 )
custom_fonts/font = SubResource( 6 )
text = "10"
align = 1
valign = 1

[node name="Magic" type="Control" parent="CharacPlane/CharacControl"]
anchor_left = 0.116
anchor_top = 0.476
anchor_right = 0.558
anchor_bottom = 0.54
margin_left = -81.2
margin_top = 36.0
margin_right = -10.6
margin_bottom = 60.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="minus" type="TextureButton" parent="CharacPlane/CharacControl/Magic"]
margin_right = 40.0
margin_bottom = 40.0
texture_normal = ExtResource( 13 )
texture_pressed = ExtResource( 19 )
texture_hover = ExtResource( 18 )

[node name="plus" type="TextureButton" parent="CharacPlane/CharacControl/Magic"]
margin_left = 340.0
margin_right = 380.0
margin_bottom = 40.0
texture_normal = ExtResource( 15 )
texture_pressed = ExtResource( 17 )
texture_hover = ExtResource( 16 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="CharacPlane/CharacControl/Magic"]
margin_left = 40.0
margin_right = 340.0
margin_bottom = 40.0
texture = ExtResource( 14 )

[node name="Stats" type="HBoxContainer" parent="CharacPlane/CharacControl/Magic"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -20.0
margin_right = 150.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 150, 20 )
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="CharacPlane/CharacControl/Magic/Stats"]
margin_top = 5.0
margin_right = 200.0
margin_bottom = 34.0
rect_min_size = Vector2( 200, 0 )
rect_pivot_offset = Vector2( 100, 15 )
custom_fonts/font = SubResource( 4 )
text = "Интеллект"
align = 1
script = ExtResource( 29 )

[node name="Change" type="Label" parent="CharacPlane/CharacControl/Magic/Stats"]
margin_left = 200.0
margin_top = 5.0
margin_right = 250.0
margin_bottom = 34.0
rect_min_size = Vector2( 50, 0 )
rect_pivot_offset = Vector2( 25, 15 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_fonts/font = SubResource( 5 )
text = "+1"
align = 1
valign = 1

[node name="Value" type="Label" parent="CharacPlane/CharacControl/Magic/Stats"]
margin_left = 250.0
margin_top = 5.0
margin_right = 300.0
margin_bottom = 34.0
rect_min_size = Vector2( 50, 0 )
rect_pivot_offset = Vector2( 25, 15 )
custom_fonts/font = SubResource( 6 )
text = "10"
align = 1
valign = 1

[node name="points" type="Control" parent="CharacPlane/CharacControl"]
margin_top = 200.0
margin_right = 380.0
margin_bottom = 240.0

[node name="Points" type="Label" parent="CharacPlane/CharacControl/points"]
margin_right = 220.0
margin_bottom = 40.0
rect_min_size = Vector2( 200, 40 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 7 )
text = "  Оставшиеся очки:"
valign = 1
script = ExtResource( 29 )

[node name="numbers" type="Label" parent="CharacPlane/CharacControl/points"]
margin_left = 220.0
margin_right = 260.0
margin_bottom = 40.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 8 )
text = "25"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Reset" type="TextureButton" parent="CharacPlane/CharacControl/points"]
margin_left = 280.0
margin_right = 380.0
margin_bottom = 40.0
texture_normal = ExtResource( 22 )
texture_pressed = ExtResource( 21 )
texture_hover = ExtResource( 20 )

[node name="Label" type="Label" parent="CharacPlane/CharacControl/points/Reset"]
margin_right = 100.0
margin_bottom = 40.0
custom_colors/font_color = Color( 1, 0.796078, 0, 1 )
custom_fonts/font = SubResource( 9 )
text = "СБРОС"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResultHealth" type="Control" parent="CharacPlane/CharacControl"]
margin_left = 420.0
margin_top = 5.0
margin_right = 670.0
margin_bottom = 45.0

[node name="Name" type="Label" parent="CharacPlane/CharacControl/ResultHealth"]
margin_right = 150.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 10 )
text = "Здоровье: "
valign = 1
script = ExtResource( 29 )

[node name="Number" type="Label" parent="CharacPlane/CharacControl/ResultHealth"]
margin_left = 150.0
margin_right = 250.0
margin_bottom = 40.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 11 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResultStraight" type="Control" parent="CharacPlane/CharacControl"]
margin_left = 420.0
margin_top = 55.0
margin_right = 670.0
margin_bottom = 95.0

[node name="Name" type="Label" parent="CharacPlane/CharacControl/ResultStraight"]
margin_right = 150.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 12 )
text = "Атака: "
valign = 1
script = ExtResource( 29 )

[node name="Number" type="Label" parent="CharacPlane/CharacControl/ResultStraight"]
margin_left = 150.0
margin_right = 250.0
margin_bottom = 40.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 13 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResultAgility" type="Control" parent="CharacPlane/CharacControl"]
margin_left = 420.0
margin_top = 105.0
margin_right = 670.0
margin_bottom = 145.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="CharacPlane/CharacControl/ResultAgility"]
margin_right = 150.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 14 )
text = "Коэф. уворота:"
valign = 1
script = ExtResource( 29 )

[node name="Number" type="Label" parent="CharacPlane/CharacControl/ResultAgility"]
margin_left = 150.0
margin_right = 250.0
margin_bottom = 40.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 15 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResultMagic" type="Control" parent="CharacPlane/CharacControl"]
margin_left = 420.0
margin_top = 155.0
margin_right = 670.0
margin_bottom = 195.0

[node name="Name" type="Label" parent="CharacPlane/CharacControl/ResultMagic"]
margin_right = 150.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 16 )
text = "Коэф. крита: "
valign = 1
script = ExtResource( 29 )

[node name="Number" type="Label" parent="CharacPlane/CharacControl/ResultMagic"]
margin_left = 150.0
margin_right = 250.0
margin_bottom = 40.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 17 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton" type="TextureButton" parent="."]
margin_left = 570.0
margin_top = 545.0
margin_right = 770.0
margin_bottom = 615.0
texture_normal = ExtResource( 27 )
texture_pressed = ExtResource( 26 )
texture_hover = ExtResource( 25 )
script = ExtResource( 28 )

[connection signal="button_up" from="BackToChoosePersons" to="BackToChoosePersons" method="_on_BackTomainmenuButton_button_up"]
[connection signal="pressed" from="CharacPlane/CharacControl/health/minus" to="CharacPlane/CharacControl" method="_on_health_minus_pressed"]
[connection signal="pressed" from="CharacPlane/CharacControl/health/plus" to="CharacPlane/CharacControl" method="_on_health_plus_pressed"]
[connection signal="pressed" from="CharacPlane/CharacControl/straight/minus" to="CharacPlane/CharacControl" method="_on_straight_minus_pressed"]
[connection signal="pressed" from="CharacPlane/CharacControl/straight/plus" to="CharacPlane/CharacControl" method="_on_straight_plus_pressed"]
[connection signal="pressed" from="CharacPlane/CharacControl/agility/minus" to="CharacPlane/CharacControl" method="_on_agility_minus_pressed"]
[connection signal="pressed" from="CharacPlane/CharacControl/agility/plus" to="CharacPlane/CharacControl" method="_on_agility_plus_pressed"]
[connection signal="pressed" from="CharacPlane/CharacControl/Magic/minus" to="CharacPlane/CharacControl" method="_on_magic_minus_pressed"]
[connection signal="pressed" from="CharacPlane/CharacControl/Magic/plus" to="CharacPlane/CharacControl" method="_on_magic_plus_pressed"]
[connection signal="pressed" from="CharacPlane/CharacControl/points/Reset" to="CharacPlane/CharacControl" method="_on_Reset_pressed"]
[connection signal="pressed" from="TextureButton" to="TextureButton" method="_on_TextureButton_pressed"]
